hphp/hack/test/typecheck/reactive/mutable_override7.php.exp
File "mutable_override7.php", line 7, characters 11-11:
Class B does not correctly implement all required methods  (Typing[4263])
File "mutable_override7.php", line 7, characters 21-21:
Some methods are incompatible with those declared in type A
Read the following to see why:
File "mutable_override7.php", line 10, characters 19-19:
Member f has the wrong type
File "mutable_override7.php", line 4, characters 41-42:
Incompatible mutabilities:
File "mutable_override7.php", line 4, characters 41-42:
This parameter is maybe-mutable
File "mutable_override7.php", line 10, characters 23-24:
This parameter is immutable
